touch control added

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         intel.xdk.device.setRotateOrientation("landscape");
         document.addEventListener("intel.xdk.device.ready", onDeviceReady, false);
 		};
-        onDeviceReady();
+        //onDeviceReady();
 	</script>
     <script type="application/javascript" src="js/jquery-1.11.1.js"></script>
-    <script type="text/javascript" src="js/jquery.mobile-1.4.4.js"></script>
+    <!--<script type="text/javascript" src="js/jquery.mobile-1.4.4.js"></script>-->
 </head>
 <body>
     <div id="main-screen">
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div>
-            <img src="img/cat_perfect.png" class="main-screen-cat" id="main-cat"/>
+            <img id="main-cat" src="img/cat_perfect.png" class="main-screen-cat"/>
         </div>
     </div>
     <div id="game-screen">
@@ -180,9 +180,9 @@
     
     </div>
     <script src="js/router.js"></script>
-    <script src="js/mechanics.js"></script>
     <script src="js/levelsPagination.js"></script>
-    <script src="js/joke.js"></script>    
+    <script src="js/mechanics.js"></script>
+    <!--<script src="js/joke.js"></script>    -->
     <!--<script src="js/test.js"></script>-->
 </body>
 </html>
